# SchoolLMS

./: Dockerfile  MakeFile  commands.txt  docker-compose-be.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt
SchoolLMS/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  middlewares.py  models.py  permissions.py  urls.py  views.py
accounts/api/: rest_api_views.py  serializers.py
accounts/migrations/: 0001_initial.py  0002_alter_teacherprofile_email_and_more.py  0003_alter_teacherprofile_email_and_more.py
accounts/tests/: api_tests.py  tests_apis.py
accounts/views/: model_views.py  simple_views.py
classes/: admin.py  models.py  urls.py  views.py
classes/migrations/: 0001_initial.py  0002_remove_classgrade_teacher_classgrade_teacher.py  0003_questions.py  0004_alter_questions_type.py  0005_questions_slug_text.py
mongodb_practice/: apps.py  urls.py  views.py
requirements/: local.txt
