[tool.poetry]
name = "schoollms"
version = "0.1.0"
description = "An Api project for a School LMS"
authors = ["Abdurrehman Afridi <abdurrehman.afridi.5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"
Faker = "^14.2.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
