[tool.poetry]
name = "schoollms"
version = "0.1.0"
description = "An Api project for a School LMS"
authors = ["Abdurrehman Afridi <abdurrehman.afridi.5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"
Faker = "^14.2.0"
requests = "^2.28.1"
django-environ = "^0.9.0"
python-slugify = "^6.1.2"
coverage = "^6.4.4"
flake8 = "^5.0.4"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
PyJWT = "^2.4.0"
django-model-utils = "^4.2.0"
pymongo = "^4.2.0"
dnspython = "^2.2.1"
pytest-django = "^4.5.2"
djangorestframework = "^3.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
